update my address

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -99,8 +99,8 @@ bookmarks=true, linktocpage]{hyperref}
 \author[adelaide]{Peter Athron}
 \author[valencia]{Jae-hyeon Park}
 \author[dresden]{Dominik St\"ockinger}
-\author[dresden]{Alexander Voigt\corref{cor1}}
-\ead{Alexander.Voigt@physik.tu-dresden.de}
+\author[desy]{Alexander Voigt\corref{cor1}}
+\ead{Alexander.Voigt@desy.de}
 \cortext[cor1]{Corresponding author}
 \address[adelaide]{ARC Centre of Excellence for Particle Physics at 
 the Tera-scale, School of Chemistry and Physics, University of Adelaide, 
@@ -110,6 +110,7 @@ Universitat de Val\`{e}ncia-CSIC,
 46100, Burjassot, Spain}
 \address[dresden]{Institut f\"ur Kern- und Teilchenphysik,
 TU Dresden, Zellescher Weg 19, 01069 Dresden, Germany}
+\address[desy]{Deutsches Elektronen-Synchrotron (DESY), 22607 Hamburg, Germany}
    
   \begin{abstract}
     We introduce \fs, a \mathematica and C++ package, which generates a fast,
