slightly reformulate SLHA block control for non-(N)MSSM models

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -363,12 +363,13 @@ We have tested that the HDECAY $3.4$ \cite{hdecay} and SDECAY $1.4$
 \cite{sdecay}, which are shipped with SUSY-HIT \cite{susyhit},
 understand the SLHA output of \fs and give matching output to that
 from Softsusy.
-
-For models which go beyond this there is no fixed standard for all
-names.  Nonetheless extending the SLHA framework and allowing user
-control of the new block names should greatly simplify the process of
-linking the output to a users own calculator or any new public tools
-that are developed for that model.  
+%
+For models which go beyond the MSSM and NMSSM no fixed standard exists
+which specifies the spectrum generator input and output format.  For
+this reason, \fs allows the user to control the SLHA input and output
+blocks in order to simplify the process of passing the output of a
+custom \fs-generated spectrum generator or any new public tool
+developed for that model.
 
 \subsection{Design goals}
 
