fixing small typos

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2282,15 +2282,15 @@ MSSM.  These corrections can then be included in the
 calculation of the Higgs pole masses when running the spectrum
 generator by setting the appropriate SLHA flags.  
 
-  When two loop corrections have been enabled in the SLHA
-  file by setting entry $4$ of the FlexibleSUSY block to $2$ the user may
-  also select individual corrections. Entries $9$,$10$,$11$ and $12$,
-  correspond to two loop corrections of order $\oatas$, $\oabas$,
-  $\oatplusabsq$ and $\oatauq$ respectively and will be disabled when
-  the corresponding entry is set to zero. In this way, for example, in
-  the NMSSM the user may decide not to use the partial corrections at
-  order $\oatplusabsq$ and $\oatauq$, all of which have
-  only been computed in the MSSM. 
+When two-loop corrections have been enabled in the SLHA file by
+setting entry $4$ of the \code{FlexibleSUSY} block to $2$ the user may
+also select individual corrections.  The \code{FlexibleSUSY} block
+entries $9$, $10$, $11$ and $12$, correspond to two-loop corrections
+of the order $\oatas$, $\oabas$, $\oatplusabsq$ and $\oatauq$
+respectively and will be disabled when the corresponding entry is set
+to zero.  In this way, for example, in the NMSSM the user may decide
+not to use the partial corrections at order $\oatplusabsq$ and
+$\oatauq$, all of which have only been computed in the MSSM.
 
 Since the Higgs mass is a very important measurement and the two-loop
 corrections can be larger than the current experimental error
