slightly reformulate "Current limitations"

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -467,28 +467,26 @@ are integrated out at the see-saw scale, between the SUSY and the GUT
 scale.
 
 \subsection{Current limitations and future extensions}
-Although we try to handle as many models as possible there are still
+Although we try to handle as many models as possible, there are still
 some limitations to what can be done. In it's current form \fs assumes
-all couplings are are real, therefore it is limited to $CP$-conserving
-versions of SUSY models.   Although it is implicit in the
-title we would like to stress that currently we cannot provide a
-spectrum generator for non-SUSY models.  This also means that like
-other spectrum generators it is difficult to reliably predict the mass
+all couplings are real, therefore it is limited to $CP$-conserving
+versions of SUSY models.  Although it is implicit in the title, we
+would like to stress that currently we cannot provide a spectrum
+generator for non-SUSY models.  This also means that like other
+spectrum generators it is difficult to reliably predict the mass
 spectrum in extreme cases such as Split-SUSY
-\cite{Wells:2003tf,ArkaniHamed:2004fb,Giudice:2004tc} where the mass
-scales of the SUSY model are drastically split leading to very large
+\cite{Wells:2003tf,ArkaniHamed:2004fb,Giudice:2004tc}, where the mass
+scales of the SUSY model are drastically split, leading to very large
 logarithms which are not resummed.  In such cases the tower of
 effective theories offers the best possibility for a solution.
-However for this to work first \fs must be extended to include
-non-SUSY models.  Finally the gauge group of the model should be
-semi-simple and contain the standard model gauge group as factor so
-that we can match to the SM at low energies.
-
+However, for this to work \fs must be extended to include non-SUSY
+models.  Finally, the gauge group of the model is currently restricted
+to be semi-simple and to contain the Standard Model gauge group as
+factor, so that the SUSY model can be directly matched to the SM at
+low energies.
+%
 Future releases which extend \fs beyond each of these limitations are
 already planned.  
-
-
-
 
 \section{Quick start}
 \label{sec:download}
