changed sentence just before Design Goal to reinstate original meaning - we pass the outut *to* other codes both private and public.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -368,8 +368,8 @@ For models which go beyond the MSSM and NMSSM no fixed standard exists
 which specifies the spectrum generator input and output format.  For
 this reason, \fs allows the user to control the SLHA input and output
 blocks in order to simplify the process of passing the output of a
-custom \fs-generated spectrum generator or any new public tool
-developed for that model.
+custom \fs-generated spectrum generator to any private or new public
+tool developed for that model.
 
 \subsection{Design goals}
 
