altered wording describing E6SSM mass comparison.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2815,8 +2815,7 @@ these were not carried out.  Although the generators assume different
 constraints and solve the boundary value problem with completely
 different algorithms they could be compared by using the output of
 the CE$_6$SSM generator as an input to \fs and the spectra were found
-to be in reasonable agreement ($\approx 10\%$), given the different
-levels of precision.
+to be in reasonable agreement  given the different levels of precision with deviatiuons in the mass spectra $\lesssim 10\%$.
 
 In addition \fs has already undergone some user testing. This includes
 analytic tests of the $R$-symmetric low-energy model (MRSSM) and
