capitalize Standard Model

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -189,7 +189,7 @@ Supersymmetry (SUSY) provides the only non-trivial way to extend the
 space-time symmetries of the Poincar\'e
 group, which still has scattering in the resulting quantum theory \cite{Coleman:1967ad,Haag:1974qh}. This leads many to suspect that
 SUSY may be realized in nature in some form. In particular
-supersymmetric extensions of the standard model (SM) where SUSY is broken
+supersymmetric extensions of the Standard Model (SM) where SUSY is broken
 at the TeV scale have been proposed to solve the hierarchy
 problem \cite{Weinberg:1975gm, Weinberg:1979bn, Gildener:1976ai,
   Susskind:1978ms, 'tHooft:1980xb}, allow gauge coupling
@@ -203,7 +203,7 @@ as the low energy effective models originating from string
 theory.
 
 Detailed phenomenological studies have been carried out for scenarios
-within the minimal supersymmetric standard model (MSSM), for a review
+within the minimal supersymmetric Standard Model (MSSM), for a review
 see \cite{Chung:2003fi}.  Such work has been greatly aided by public
 spectrum generators for the MSSM
 \cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae,Chowdhury:2011zr},
@@ -213,7 +213,7 @@ of breaking mechanism inspired boundary conditions and specified
 parameters. Beyond the MSSM there are also two public spectrum
 generators \cite{Ellwanger:2004xm, Ellwanger:2005dv,
   Ellwanger:2006rn,Ellwanger:2008py, Allanach:2013kza} for the next to
-minimal supersymmetric standard model (NMSSM)  (for
+minimal supersymmetric Standard Model (NMSSM)  (for
 recent reviews see \cite{Ellwanger:2009dp, Maniatis:2009re}).
 
 
@@ -237,7 +237,7 @@ Firstly low energy signatures expected from such models, such as the
 classic jets plus missing transverse energy signature, have not been
 observed, substantially raising the lower limit on sparticle masses
 (see e.g.~\cite{Aad:2013wta,Chatrchyan:2014lfa}). No other signature
-of beyond the standard model (BSM) physics has been observed, leaving
+of beyond the Standard Model (BSM) physics has been observed, leaving
 the fundamental questions which motivated BSM physics
 unanswered. Secondly ATLAS and CMS discovered \cite{ATLAS:2012ae,
   Chatrchyan:2012tx} a light Higgs of $125$ GeV, within the mass range
