add heaviest neutralino to pole mass comparison table to avoid confusion

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2205,8 +2205,9 @@ difference between \code{LowPrecision} and \code{MediumPrecision}.
 Not neglecting the two-loop terms by using \code{HighPrecision}
 increases the gluino mass about $1\unit{\%}$ for this parameter point.
 %
-(iii) The pole mass of the lightest neutralino,
-$m_{\tilde{\chi}_1^0}$, is given in the third row.  Since the
+(iii) The pole masses of the lightest and heaviest neutralinos,
+$m_{\tilde{\chi}_1^0}$ and $m_{\tilde{\chi}_4^0}$, are given in the rows
+$3$--$4$.  Since the
 momentum-dependent loop-corrections to the lightest neutralino mass
 are small for this parameter point, it's pole mass varies only in the
 sub-GeV range between the three methods.  However, the run-time of the
@@ -2215,7 +2216,7 @@ the \code{HighPrecision}, due to the complicated structure of the loop
 corrections in Eq.~\eqref{eq:majorana-loop-corrections}.
 %
 (iv) The pole masses of the lightest sfermions are given in rows
-$4$--$6$.  Since these particles are contained in $6$-plets, the
+$5$--$7$.  Since these particles are contained in $6$-plets, the
 run-time for the calculation of their pole masses is dramatically
 increased by around a factor $20$ between \code{LowPrecision} and
 \code{HighPrecision}.  However, since the change in the lightest
@@ -2243,6 +2244,10 @@ $\unit{0.4\%}$, one can consider calculating then with
     & $2295\unit{GeV}$ ($4.17\unit{ms}$)
     & $2295\unit{GeV}$ ($16.1\unit{ms}$)
     & $2295\unit{GeV}$ ($64.2\unit{ms}$) \\
+    $m_{\tilde{\chi}_4^0}$
+    & $4181\unit{GeV}$ ($4.17\unit{ms}$)
+    & $4174\unit{GeV}$ ($16.1\unit{ms}$)
+    & $4174\unit{GeV}$ ($64.2\unit{ms}$) \\
     $m_{\tilde{u}_1}$
     & $8703\unit{GeV}$ ($2.45\unit{ms}$)
     & $8714\unit{GeV}$ ($14.9\unit{ms}$)
