Fix a typo in paper

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1615,7 +1615,7 @@ some cases, as for example in the real MSSM, the different solutions
 are related by one or more global signs for the parameters, as for example in
 Eq.~\eqref{eq:EWSB-solution-for-mu}.  \fs recognizes such cases and
 introduces these global signs as additional free parameters to allow
-the user to chose between the different solutions.  The case of the
+the user to choose between the different solutions.  The case of the
 real MSSM Eq.~\eqref{eq:EWSB-solution-for-mu} is therefore handled
 automatically in \fs, because $\sign\mu$ is automatically introduced
 as an additional free parameter.
