--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@ FlexibleSUSY-1.0.4 [not released yet]
    parameter point using command line parameters instead of an SLHA
    input file.
 
+ * Bugfix (commit 6f7d3de): allow plain model parameters for scale
+   definition, for example in the form SUSYScale = vu .
+
 FlexibleSUSY-1.0.3 [November, 21 2014]
 
  * Allow selection of Higgs 2-loop contributions in SLHA input file
