Cite Kalmykov et. al. hep-ph/9701308 for 2-loop DR-bar t,b masses

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1524,7 +1524,7 @@ where the $\Sigma_{t}$ is the top one-loop self-energy without QCD
 contributions.  The labels $L,R,S$ denote the left-, right- and
 non-polarized part of the self-energy.  The separated QCD corrections
 $\Delta m_t^{(1),\text{qcd}}$ and $\Delta m_t^{(2),\text{qcd}}$ are
-taken from \cite{Bednyakov:2002sf} and read
+taken from \cite{Avdeev:1997sz,Bednyakov:2002sf} and read
 %
 \begin{align}
   \Delta m_t^{(1),\text{qcd}} &= -\frac{g_3^2}{12 \pi^2} \left[5-3 \log\left(\frac{m_t^2}{\mu^2}\right)\right],\\
@@ -1539,7 +1539,7 @@ taken from \cite{Bednyakov:2002sf} and read
 \end{align}
 %
 The \DRbar mass of the bottom quark is calculated as
-\cite{Baer:2002ek,Skands:2003cj}
+\cite{Avdeev:1997sz,Baer:2002ek,Skands:2003cj}
 %
 \begin{align}
   m_{b,\text{susy}}^{\text{\DRbar}}(\mu) &=
@@ -4440,6 +4440,15 @@ Phys. Commun. {\bf 108} (1998) 56; J.~M.~Butterworth, A.~Arbey, L.~Basso, S.~Bel
   Nucl.\ Phys.\ B {\bf 178} (1981) 75.
   %%CITATION = NUPHA,B178,75;%%
   %265 citations counted in INSPIRE as of 10 May 2014
+
+%\cite{Avdeev:1997sz}
+\bibitem{Avdeev:1997sz}
+  L.~V.~Avdeev and M.~Y.~Kalmykov,
+  %``Pole masses of quarks in dimensional reduction,''
+  Nucl.\ Phys.\ B {\bf 502} (1997) 419
+  [hep-ph/9701308].
+  %%CITATION = HEP-PH/9701308;%%
+  %66 citations counted in INSPIRE as of 28 Nov 2014
 
 %\cite{Bednyakov:2002sf}
 \bibitem{Bednyakov:2002sf}
