--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@ FlexibleSUSY-1.0.4 [not released yet]
  * Bugfix (commit 6f7d3de): allow plain model parameters for scale
    definition, for example in the form SUSYScale = vu .
 
+ * Bugfix (commit 44baa73): allow model parameters in first guesses of
+   scale definitions, for example
+   SUSYScaleFirstGuess = Sqrt[mq2[3,3] * mu2[3,3]]
+
 FlexibleSUSY-1.0.3 [November, 21 2014]
 
  * Allow selection of Higgs 2-loop contributions in SLHA input file
