--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,11 @@ FlexibleSUSY-1.0.4 [not released yet]
    Higgs masses (EWSB output) and non-universal trilinear couplings
    A_lambda and A_kappa at MX.
 
+ * Allow user input of W boson pole mass in FlexibleSUSY block entry
+   12.
+
+ * Read user input Z boson pole mass from SMINPUTS block entry 4.
+
  * Bugfix (commit 6f7d3de): allow plain model parameters for scale
    definition, for example in the form SUSYScale = vu .
 
