--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,9 @@ FlexibleSUSY-1.0.4 [not released yet]
  * Bugfix (commit 77dce8b): correct momentum guess for the calculation
    of the self-energies with LowPrecision.
 
+ * Support Intel C++ compiler versions 12.1 and 13.x (commits 78d73e7
+   and bf5a08e)
+
 FlexibleSUSY-1.0.3 [November, 21 2014]
 
  * Allow selection of Higgs 2-loop contributions in SLHA input file
