--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,13 @@ FlexibleSUSY-1.0.4 [not released yet]
 
  * Read user input Z boson pole mass from SMINPUTS block entry 4.
 
+ * Automatic check for non-perturbative dimensionless model parameters
+   at the high-scale.  The check can be disabled by stetting
+   FSCheckPerturbativityOfDimensionlessParameters = False;
+   in the model file.  The threshold can be set via the
+   FSPerturbativityThreshold variable.  The default threshold is
+   N[Sqrt[4 Pi]] = 3.54491.
+
  * Bugfix (commit 6f7d3de): allow plain model parameters for scale
    definition, for example in the form SUSYScale = vu .
 
