adding table of contents

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -154,6 +154,7 @@ IFIC--14--40 \\
 ADP-14-17/T875
 \end{textblock*}
 
+\clearpage
 \section{Program Summary}
 \noindent{\em Program title:} \fs\\ {\em Program obtainable from:}
          {\tt http://flexiblesusy.hepforge.org/}\\ {\em Distribution
@@ -178,9 +179,8 @@ ADP-14-17/T875
          modular nature of the generated code adaption and extension
          to overcome restrictions in scope is quite straightforward.
 
-
-
-
+\clearpage
+\tableofcontents
 
 \newpage
 \section{Introduction}
