add little line spacings between Program Summary items

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -156,26 +156,27 @@ ADP-14-17/T875
 
 \clearpage
 \section{Program Summary}
-\noindent{\em Program title:} \fs\\ {\em Program obtainable from:}
-         {\tt http://flexiblesusy.hepforge.org/}\\ {\em Distribution
-           format:}\/ tar.gz\\ {\em Programming language:} {\tt
-           C++, Wolfram/\mathematica, FORTRAN, Bourne shell}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
-           system:}\/ Tested on Linux 3.x, Mac OS X\\
+\noindent{\em Program title:} \fs\\[0.5em] {\em Program obtainable from:}
+         {\tt http://flexiblesusy.hepforge.org/}\\[0.5em] {\em Distribution
+           format:}\/ tar.gz\\[0.5em] {\em Programming language:} {\tt
+           C++, Wolfram/\mathematica, FORTRAN, Bourne shell}\\[0.5em]
+         {\em Computer:}\/ Personal computer\\[0.5em] {\em Operating
+           system:}\/ Tested on Linux 3.x, Mac OS X\\[0.5em]
          {\em External routines:}\/ SARAH 4.0.4, Boost library,
-         Eigen, LAPACK\\ {\em
-           Typical running time:}\/ 0.06-0.2 seconds per parameter
-         point.\\ {\em Nature of problem:}\/ Determining the mass
+         Eigen, LAPACK\\[0.5em] {\em
+           Typical running time:}\/ 0.06--0.2 seconds per parameter
+         point\\[0.5em] {\em Nature of problem:}\/ Determining the mass
          spectrum and mixings for any supersymmetric model. The
          generated code must find simultaneous solutions to
          constraints which are specified at two or more different
          renormalization scales, which are connected by
          renormalization group equations forming a large set of
-         coupled first-order differential equations. \\ {\em Solution method:}\/
+         coupled first-order differential equations. \\[0.5em] {\em Solution method:}\/
          Nested iterative algorithm and numerical minimization of the
-         Higgs potential.  \\ {\em Restrictions:} The couplings must
+         Higgs potential.  \\[0.5em] {\em Restrictions:} The couplings must
          remain perturbative at all scales between the highest and
          lowest boundary condition.  \fs~ assumes that all couplings
-         of the model are real (i.e.\ $CP-$conserving). Due to the
+         of the model are real (i.e.\ $CP$-conserving). Due to the
          modular nature of the generated code adaption and extension
          to overcome restrictions in scope is quite straightforward.
 
