adding self-energy symbol to be absolutely clear

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1523,7 +1523,7 @@ detail, the top quark \DRbar mass is calculated as
 %
 where the $\Sigma_{t}$ is the top one-loop self-energy without QCD
 contributions.  The labels $L,R,S$ denote the left-, right- and
-non-polarized part of the self-energy.  The separated QCD corrections
+non-polarized part of the self-energy, $\Sigma_{t}$.  The separated QCD corrections
 $\Delta m_t^{(1),\text{qcd}}$ and $\Delta m_t^{(2),\text{qcd}}$ are
 taken from \cite{Avdeev:1997sz,Bednyakov:2002sf} and read
 %
