describe symbol m_t to be absolutely clear
Note: The meaning of m_t was not obvious to Pietro Slavich, so, let's
be absolutely clear here.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1528,7 +1528,8 @@ $\Delta m_t^{(1),\text{qcd}}$ and $\Delta m_t^{(2),\text{qcd}}$ are
 taken from \cite{Avdeev:1997sz,Bednyakov:2002sf} and read
 %
 \begin{align}
-  \Delta m_t^{(1),\text{qcd}} &= -\frac{g_3^2}{12 \pi^2} \left[5-3 \log\left(\frac{m_t^2}{\mu^2}\right)\right],\\
+  \Delta m_t^{(1),\text{qcd}} &= -\frac{g_3^2}{12 \pi^2} \left[5-3 \log\left(\frac{m_t^2}{\mu^2}\right)\right],
+  \label{eq:top-selfenergy-qcd-1L}\\
   \begin{split}
     \Delta m_t^{(2),\text{qcd}} &= \left(\Delta
       m_t^{(1),\text{qcd}}\right)^2 \\
@@ -1537,7 +1538,12 @@ taken from \cite{Avdeev:1997sz,Bednyakov:2002sf} and read
     \log\left(\frac{m_t^2}{\mu^2}\right)
     -48 \zeta(3)+2011+16 \pi ^2 (1+\log 4)\Bigg].
   \end{split}
+  \label{eq:top-selfenergy-qcd-2L}
 \end{align}
+%
+In Eqs.\ \eqref{eq:top-selfenergy-qcd-1L} and
+\eqref{eq:top-selfenergy-qcd-2L} $m_t$ denotes the \DRbar mass of the
+top quark.
 %
 The \DRbar mass of the bottom quark is calculated as
 \cite{Avdeev:1997sz,Baer:2002ek,Skands:2003cj}
