add acknowledgments to DH

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2966,7 +2966,9 @@ for further adaptions to the E6SSM model file and for supplying it to
 us and for for testing and identifying several bugs in \fs and in
 SARAH, in work on the MRSSM; Ulrik Günther for compilation tests on
 Mac OS X and Dylan Harries for spotting a bug in the configuration
-script.
+script and creating an EWSB fixed-point iteration implementation for
+the CNE$_6$SSM, which served as a prototype for implementing a
+generalized EWSB fixed-point iteration.
 %
 J.P. acknowledges support from the MEC and FEDER (EC) Grants
 FPA2011--23596 and the Generalitat Valenciana under grant PROMETEOII/2013/017.
