--- a/TODO
+++ b/TODO
@@ -1,11 +1,12 @@
 List of features for future FlexibleSUSY releases
 =================================================
 
-G_mu input
-----------
+MW predicition
+--------------
 
-Replacement for low-scale boundary condition which calculates g1 and
-g2 from G_mu in the MSSM and NMSSM.
+The output value of MW should be taken from oneset, instead of the
+model class.  Reason: The model class calculates MW at MSUSY, while
+oneset calculates MW at MZ.
 
 
 Explicit path to SARAH installation
